# avril

./: .ycm_extra_conf.py  CMakeLists.txt  adc.cc  adc.h  audio_output.h  avril.h  avrlib.h  base.h  boot.h  debug_output.h  gpio.h  log2.h  op.h  output_stream.h  parallel_io.h  random.cc  random.h  resources_manager.h  ring_buffer.h  serial.cc  serial.h  size_to_type.h  software_serial.h  spi.h  string.cc  string.h  stringutil.cc  stringutil.h  task.h  time.cc  time.h  timer.h  watchdog_timer.h
devices/: bicolor_led_array.h  buffered_display.h  external_eeprom.h  hd44780_lcd.h  led.h  led_array.h  mcp492x.h  mux4051.h  pot_scanner.h  rotary_encoder.h  rotary_encoder_array.h  sd_card.h  shift_register.h  switch.h  wii_nunchuk.cc  wii_nunchuk.h
filesystem/: directory.cc  directory.h  fat_file_reader.h  file.cc  file.h  filesystem.cc  filesystem.h
i2c/: i2c.cc  i2c.h
io/: adc.h  gpio.h  i2c.cc  i2c.h  parallel_io.h  pwm_capture.h  ring_buffer.h  serial.cc  serial.h  serial_config.h  software_serial.h  spi.h
system/: init.h  time.cc  time.h  timer.h  timer_config.h  watchdog_timer.h
tools/: resources_compiler.py
ui/: event_queue.h
utils/: debug_output.h  op.h  output_stream.h  random.cc  random.h  stringutil.h
